--- a/ClashX/Base.lproj/Main.storyboard
+++ b/ClashX/Base.lproj/Main.storyboard
@@ -585,6 +585,7 @@
                         <outlet property="tunModeMenuItem" destination="ZoW-Ax-rde" id="ep1-C4-irW"/>
                         <outlet property="updateAlphaMetaMenuItem" destination="MWh-yg-3Yk" id="jJi-h8-7T2"/>
                         <outlet property="useAlphaMetaMenuItem" destination="sk5-MZ-XB1" id="Ijq-xa-vVc"/>
+                        <outlet property="useYacdDashboardMenuItem" destination="GRz-PJ-MJ7" id="Jj1-Wl-NUt"/>
                     </connections>
                 </customObject>
                 <menu id="Afa-lD-EbR">
@@ -818,6 +819,12 @@
                                         <modifierMask key="keyEquivalentModifierMask"/>
                                         <connections>
                                             <action selector="hideUnselectable:" target="Voe-Tx-rLC" id="ifq-SY-ov8"/>
+                                        </connections>
+                                    </menuItem>
+                                    <menuItem title="Use yacd Dashboard" id="GRz-PJ-MJ7">
+                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                        <connections>
+                                            <action selector="useYacdDashboard:" target="Voe-Tx-rLC" id="spp-Vf-uu4"/>
                                         </connections>
                                     </menuItem>
                                 </items>
