--- a/ClashX/Base.lproj/Main.storyboard
+++ b/ClashX/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Settings-->
         <scene sceneID="7zJ-aQ-tNg">
             <objects>
-                <tabViewController title="Settings" storyboardIdentifier="SettingTabViewController" showSeguePresentationStyle="single" selectedTabViewItemIndex="0" id="LAj-p8-9gd" customClass="SettingTabViewController" customModule="ClashX" customModuleProvider="target" sceneMemberID="viewController">
+                <tabViewController title="Settings" storyboardIdentifier="SettingTabViewController" showSeguePresentationStyle="single" selectedTabViewItemIndex="0" id="LAj-p8-9gd" customClass="SettingTabViewController" customModule="ClashX_Meta" customModuleProvider="target" sceneMemberID="viewController">
                     <tabViewItems>
                         <tabViewItem label="General" identifier="general" image="gearshape" catalog="system" id="Ltt-Vq-Hh1"/>
                         <tabViewItem image="keyboard" catalog="system" id="gnz-rO-Jv7"/>
@@ -43,10 +43,10 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="10" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VYa-DX-JOe">
-                                <rect key="frame" x="20" y="20" width="432" height="634"/>
+                                <rect key="frame" x="20" y="20" width="432" height="626"/>
                                 <subviews>
                                     <box borderType="line" title="Box" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Gnh-m8-PAz">
-                                        <rect key="frame" x="-3" y="540" width="438" height="96"/>
+                                        <rect key="frame" x="-3" y="534" width="438" height="94"/>
                                         <view key="contentView" id="Lai-8r-q7z">
                                             <rect key="frame" x="3" y="3" width="432" height="88"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -97,17 +97,17 @@
                                         </view>
                                     </box>
                                     <box title="Clash Settings (restart app to take effect)" translatesAutoresizingMaskIntoConstraints="NO" id="bcR-rG-52F">
-                                        <rect key="frame" x="-3" y="374" width="438" height="160"/>
+                                        <rect key="frame" x="-3" y="370" width="438" height="158"/>
                                         <view key="contentView" id="baR-Ra-RV2">
-                                            <rect key="frame" x="4" y="5" width="430" height="140"/>
+                                            <rect key="frame" x="3" y="3" width="432" height="140"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" verticalHuggingPriority="1000" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ito-5t-76A">
-                                                    <rect key="frame" x="20" y="20" width="390" height="100"/>
+                                                    <rect key="frame" x="20" y="20" width="392" height="100"/>
                                                     <subviews>
                                                         <button verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="buf-aL-Tkl">
                                                             <rect key="frame" x="-2" y="83" width="98" height="18"/>
-                                                            <buttonCell key="cell" type="check" title="Enable IPv6" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="KRm-2U-T4s">
+                                                            <buttonCell key="cell" type="check" title="Enable IPv6" bezelStyle="regularSquare" imagePosition="left" enabled="NO" state="on" inset="2" id="KRm-2U-T4s">
                                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                                 <font key="font" metaFont="system"/>
                                                             </buttonCell>
@@ -216,7 +216,7 @@
                                                                 </textField>
                                                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N0V-ac-Acm">
                                                                     <rect key="frame" x="221" y="1" width="169" height="18"/>
-                                                                    <buttonCell key="cell" type="check" title="Override Config Setting" bezelStyle="regularSquare" imagePosition="left" inset="2" id="LW4-cA-3bB">
+                                                                    <buttonCell key="cell" type="check" title="Override Config Setting" bezelStyle="regularSquare" imagePosition="left" enabled="NO" inset="2" id="LW4-cA-3bB">
                                                                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                                         <font key="font" metaFont="system"/>
                                                                     </buttonCell>
@@ -1724,19 +1724,19 @@
         <!--Debug-->
         <scene sceneID="uyL-8z-i0d">
             <objects>
-                <viewController title="Debug" showSeguePresentationStyle="single" id="kdV-Em-qBi" customClass="DebugSettingViewController" customModule="ClashX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Debug" showSeguePresentationStyle="single" id="kdV-Em-qBi" customClass="DebugSettingViewController" customModule="ClashX_Meta" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" misplaced="YES" id="mud-rj-Isy">
                         <rect key="frame" x="0.0" y="0.0" width="416" height="412"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <box title="Debug Setting" translatesAutoresizingMaskIntoConstraints="NO" id="NLT-FZ-48V">
-                                <rect key="frame" x="17" y="21" width="382" height="392"/>
+                                <rect key="frame" x="17" y="21" width="382" height="390"/>
                                 <view key="contentView" id="JPj-NU-Cwp">
-                                    <rect key="frame" x="4" y="5" width="374" height="372"/>
+                                    <rect key="frame" x="3" y="3" width="376" height="372"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <stackView distribution="fillProportionally" orientation="vertical" alignment="leading" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="1000" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6bh-Rg-qaG">
-                                            <rect key="frame" x="20" y="20" width="334" height="332"/>
+                                            <rect key="frame" x="20" y="20" width="336" height="332"/>
                                             <subviews>
                                                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5WY-QP-cCq">
                                                     <rect key="frame" x="-2" y="315" width="154" height="18"/>
